Remove API key again

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
         "https://gpsthp314159.blob.core.windows.net/gps-data/?restype=container&comp=list";
 
       const subscriptionKey =
-        "<subscription_key>";
+        "<map_subscription_key>"; 
 
       const map_center = [106.61411702406991, 11.107633851142298];
       const map_zoom = 16;
